refactor into integer
